Fix some nearly invisible colors on light mode

--- a/src/styles/variables-light.scss
+++ b/src/styles/variables-light.scss
@@ -1,11 +1,11 @@
 html.light {
     --ipl-input-color: #737373;
-    --ipl-input-color-hover: #A1A1A1;
+    --ipl-input-color-hover: #6C6C6C;
     --ipl-input-color-active: #111111;
     --ipl-input-color-placeholder: rgba(12, 12, 12, 0.5);
     --ipl-input-error-color: #E74E36;
-    --ipl-input-color-alpha-hover: rgba(255, 255, 255, 0.05);
-    --ipl-input-color-alpha-active: rgba(255, 255, 255, 0.2);
+    --ipl-input-color-alpha-hover: rgba(115, 115, 115, 0.1);
+    --ipl-input-color-alpha-active: rgba(115, 115, 115, 0.2);
 
     --ipl-focus-outline-color: #111111;
     --ipl-hover-overlay-color: rgba(0, 0, 0, 0.04);
